--- a/solarModule.ipynb
+++ b/solarModule.ipynb
@@ -7,7 +7,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install -q xlrd\n",
+    "!git clone git@github.com:BahaNordi/InfraredSolarModules.git\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -28,11 +31,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append('/content/gdrive/My Drive/Colab_Notebooks/jua_solar')\n",
-    "!pip install visdom"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
