--- a/solarModule.ipynb
+++ b/solarModule.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "!pip install -q xlrd\n",
-    "!git clone git@github.com:BahaNordi/InfraredSolarModules.git\n"
+    "!git clone https://BahaNordi:47DSYzLVZ6HyfuU@github.com/BahaNordi/InfraredSolarModules.git"
    ]
   },
   {
