--- a/solarModule.ipynb
+++ b/solarModule.ipynb
@@ -31,7 +31,27 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "!pip install fire"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from InfraredSolarModules.train_main import train\n",
+    "from InfraredSolarModules.config.yaml_reader import open_yaml\n",
+    "import fire\n",
+    "config = open_yaml('/content/InfraredSolarModules/config/config_baseModel_colab.yml')\n",
+    "fire.Fire(train(config))\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
